--- a/code/Basic Dataset Stats.Rmd
+++ b/code/Basic Dataset Stats.Rmd
@@ -2,14 +2,16 @@
 title: "Basic Dataset Stats"
 author: "Courtney Stepien"
 date: "August 4, 2016"
-output: 
- html_document:
-    toc: true
-    number_sections: true
-    theme: cerulean
-    highlight: pygments
+output:
+  pdf_document:
+    toc: yes
+  html_document:
     fig_caption: yes
-    self_contained: false
+    highlight: pygments
+    number_sections: yes
+    self_contained: no
+    theme: cerulean
+    toc: yes
 ---
 
 # File status
